# GraphScope

interactive_engine/compiler/: Makefile
interactive_engine/compiler/conf/: ir.compiler.properties
interactive_engine/compiler/src/main/java/com/alibaba/graphscope/: GraphServer.java
interactive_engine/compiler/src/main/java/com/alibaba/graphscope/gremlin/integration/result/: TestGraphFactory.java
interactive_engine/executor/assembly/grin_gart/: Cargo.toml
interactive_engine/executor/ir/graph_proxy/src/adapters/grin_store/: read_graph.rs
interactive_engine/executor/ir/graph_proxy/src/apis/: mod.rs  read_graph.rs
interactive_engine/executor/ir/runtime/: Cargo.toml
interactive_engine/executor/ir/runtime/src/: assembly.rs
interactive_engine/executor/store/grin/: build.rs
interactive_engine/executor/store/grin/src/: grin.rs
