[package]
name = "runtime"
version = "0.1.0"
edition = "2018"

[dependencies]
dyn_type = {path = "../../common/dyn_type"}
indexmap = "1.9"
ir_common = {path = "../common"}
lazy_static = "1.3.0"
log = "0.4"
pegasus_common = { path = "../../engine/pegasus/common" }
pegasus = { path = "../../engine/pegasus/pegasus" }
pegasus_server = { path = "../../engine/pegasus/server" }
graph_proxy = { path="../graph_proxy", features = ["grin_gart"] }
prost = "0.11"
vec_map = "0.8.2"
ahash = "0.8"
rand = "0.8.5"
grin =  {path = "../../store/grin", features = ["grin_features_enable_gart"]}

pegasus_network = { path = "../../engine/pegasus/network" }


[features]
default = []
proto_inplace = ["ir_common/proto_inplace", "pegasus_server/gcip"]
with_v6d = ["graph_proxy/with_v6d"]